# unholy

./: .flake8  .gitignore  .readthedocs.yaml  Dockerfile  Justfile  README.md  bootstrap.Dockerfile  pyproject.toml
.github/workflows/: docker-publish.yml  python-lint.yml  python-publish.yml
babashka/: astronvim-config.lua  dev.sh  emanate.sh  pipx.sh
docs/: Makefile  conf.py  index.rst  installation.rst  quickstart.rst
docs/cookbook/: index.rst  non-unholy.rst  volume.rst
docs/discussions/: configuration.rst  index.rst  overview.rst  unholyfile.rst
docs/reference/: index.rst  ls.rst  neovide.rst  new.rst  remake.rst  shell.rst
unholy/: __init__.py  __main__.py  compose.py  config.py  core.Unholyfile  docker.py  git.py  junk_drawer.py  nvim.py  processes.py
