[tool.poetry]
name = "unholy"
version = "0.1.0"
description = "The melding of docker compose and neovim"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
click = "^8.1.3"
docker = "^6.0.1"

[tool.poetry.scripts]
unholy = 'unholy:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
