[project]
name = "unholy"

[tool.poetry]
name = "unholy"
version = "0.2.1"
description = "The melding of docker compose and neovim"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "GPL-3"
readme = "README.md"
repository = "https://github.com/AstraLuma/unholy"

[tool.poetry.dependencies]
python = ">3.10"
click = "^8.1.3"
docker = {extras = ["ssh", "websockets"], version = "^6.1.3"}
tomlkit = "^0.12.2"
appdirs = "^1.4.4"

[tool.poetry.scripts]
unholy = 'unholy:main'

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
sphinx = "^7.2.6"
furo = "^2023.9.10"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^5.1.0"

[tool.bork.zipapp]
enabled = true
main = "unholy:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
